Fix thumbnail alignment

--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -39,6 +39,7 @@
 	.thumbnail-container {
 		display: block;
 		min-height: 150px;
+		text-align: center;
 	}
 }
 .modal-content {
