--- a/style.css
+++ b/style.css
@@ -10800,29 +10800,30 @@ body.home .mailinglist h2 {
 .person .thumbnail-container {
   display: block;
   min-height: 150px;
+  text-align: center;
 }
 
-/* line 44, sass/pages/_about.scss */
+/* line 45, sass/pages/_about.scss */
 .modal-content {
   padding: 1rem 2rem 2rem 2rem;
   border-radius: 0;
   text-align: center;
 }
 @media (min-width: 992px) {
-  /* line 44, sass/pages/_about.scss */
+  /* line 45, sass/pages/_about.scss */
   .modal-content {
     text-align: left;
   }
 }
-/* line 51, sass/pages/_about.scss */
+/* line 52, sass/pages/_about.scss */
 .modal-content img {
   margin-bottom: .25rem;
 }
-/* line 54, sass/pages/_about.scss */
+/* line 55, sass/pages/_about.scss */
 .modal-content h1 {
   margin-bottom: 0;
 }
-/* line 57, sass/pages/_about.scss */
+/* line 58, sass/pages/_about.scss */
 .modal-content p {
   text-align: left;
   line-height: 1.5;
